[misc] permit java 11 testing